made a separate js file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
+  <link type="text/javascript" src="/script.js">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
