--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
-  <link type="text/javascript" src="/script.js">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -57,29 +56,8 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
 
-  document.addEventListener('keydown', keyPressed);
-
-  var keys = document.querySelector('.keys');
-
-  function keyPressed(e){
-    var myDiv = document.querySelector('div[data-key="' + e.keyCode + '"]');
-    myDiv.addEventListener('transitionend', removeClass);
-    myDiv.classList.add('playing');
-
-    var audio = document.querySelector('audio[data-key="' + e.keyCode + '"]');
-    audio.currentTime = 0;
-    audio.play();
-    //var sound = new Audio(audio);
-    //sound.play();
-  }
-
-  function removeClass(e){
-    e.target.classList.remove('playing');
-  }
-
-</script>
+  <script src="script.js"></script>
 
 </body>
 </html>
