--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
     </div>
   </div>
 
+  <div id = "selectAndRecord" class = "keys">
+    <div class = "key">
+      <button class = "recordButton">RECORD</button>
+    </div>
+
+    <form class = "key">
+      <select class ="recordButton" >
+          <option>SELECT</option>
+          <option>SLOW</option>
+          <option>MEDIUM</option>
+          <option>FAST</option>
+        </select>
+    </form>
+  </div>
+
   <audio data-key="65" src="sounds/clap.wav"></audio>
   <audio data-key="83" src="sounds/hihat.wav"></audio>
   <audio data-key="68" src="sounds/kick.wav"></audio>
